Fixed horizontal scroll bar bug

--- a/app/src/main.css
+++ b/app/src/main.css
@@ -7,7 +7,7 @@ body {
 }
 
 .main {
-    width: 100vw;
+    width: 100%;
 }
 
 .main-title-screen {
@@ -48,7 +48,7 @@ body {
 
 #focus-pokemon-popup {
     position: fixed;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     top: 0;
     left: 0;
@@ -93,14 +93,13 @@ body {
 }
 
 .pokemon-list-frame {
-    margin-bottom: 5vw;
+    width: 100%;
 }
 
 .pokemon-list {
-    padding: 0 8.5vw;
+    padding: 0 8.5vw 8.5vh;
     display: grid;
     grid-template-columns: 20vw 20vw 20vw 20vw;
-    height: 100vh;
     text-align: center;
     gap: 1vw;
 }
